<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherAndForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top fragment container -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WeatherTempNow"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WeatherNow"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerInParent="true"
                android:src="@drawable/cloudy"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/CityNow"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </RelativeLayout>

        <!-- Bottom fragment container -->
        <LinearLayout
            android:id="@+id/forecast_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/background"
            android:orientation="vertical">

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/MondayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cloudy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/MondayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/MondayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Tuesday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/TuesdayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/rainy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/TuesdayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/TuesdayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Wednesday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/WednesdayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/sun"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/WednesdayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/WednesdayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Thursday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ThursdayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cloudy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/ThursdayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/ThursdayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Friday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/FridayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cloudy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/FridayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/FridayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Saturday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/SaturdayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/rainy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/SaturdayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/SaturdayTemp" />
                </LinearLayout>
            </LinearLayout>

            <!-- DayForecast Item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sunday"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/SundayImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/rainy"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/SundayWeather" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/SundayTemp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
